[project]
name = "tree-edit-distance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yasufumi Taniguchi", email = "yasufumi.taniguchi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
ci = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "SIM", # flake8-simplify
    "Q", # flake8-quotes
    "PIE", # flake8-pie
    "UP",  # pyupgrade
    "PT",  # flake8-pytest-style
    "C90",  # mccabe
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
files = ["src", "tests"]
strict = true

[tool.pytest.ini_options]
addopts = "-vv"